--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link rel="icon" type="image/svg+xml" href="/findy.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@500;600;700&display=swap" rel="stylesheet">
-
-     
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    
+   
     <script type="text/javascript">
       // Function to fix Refresh Problem in the server
       (function(l) {
